# excel_auto

./: README.md  example.xlsx  main.py  pyproject.toml  ~$example.xlsx
