[tool.poetry]
name = "excel-auto"
version = "0.1.0"
description = ""
authors = ["Samieh Abdeljabbar <49135655+samiehabdeljabbar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
